--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   Hello world
-  <script src="Questions/maxWealth.js"></script>
+  <script src="findMax.js"></script>
 
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
